--- a/.gitignore
+++ b/.gitignore
@@ -409,5 +409,8 @@ run.bat
 Makefile
 CMakeLists.txt
 
-# Ignores Build Details for Macbook
+# Ignores Build Details for Macbook (Jianwen)
 out
+
+# Ignores Build Details of Windows (Marvin)
+build.sh
