--- a/.gitignore
+++ b/.gitignore
@@ -405,3 +405,12 @@ FodyWeavers.xsd
 *.vcxproj
 *.filters
 *.sln
+run.bat
+Makefile
+CMakeLists.txt
+
+# Ignores Build Details for Macbook (Jianwen)
+out
+
+# Ignores Build Details of Windows (Marvin)
+build.sh
