changed a file name. hehe.
also added glad.cpp and glm, and an include directory

--- a/meson.build
+++ b/meson.build
@@ -3,8 +3,12 @@ project('sdl_ecsprac', 'cpp',
 
 sdl2_dep = dependency('sdl2')
 imgui_dep = dependency('imgui')
+glm_dep = dependency('glm')
 
-executable('main', 'code/sdl_ecsprac.cpp',
-           dependencies: [imgui_dep, sdl2_dep])
+incdir = include_directories('include')
+
+executable('main', 'src/sdl_ecsprac.cpp', 'src/glad.cpp',
+           dependencies: [imgui_dep, sdl2_dep, glm_dep],
+           include_directories : incdir)
 
 
