Created rendering pipeline for WebGPU backend

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,13 +95,15 @@ if(${render_sys} STREQUAL "Vulkan")
         target_link_libraries(DEPENDENCIES INTERFACE vulkan-backend)
 
 elseif(${render_sys} STREQUAL "WebGPU")
-        add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/renderer/wpu_backend wpu-backend)
 
+        # Includes backend dll as part of projects
+        add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/renderer/wpu_backend wpu-backend)
         target_compile_definitions(wpu-backend PRIVATE SKL_LOGGING_ENABLED=1)
         target_link_libraries(DEPENDENCIES INTERFACE
                 wpu-backend
         )
 
+        # Allows for switching off certain pieces of logic not supported by certain backends
         target_compile_definitions(DEPENDENCIES INTERFACE 
                 SKL_RENDERER=1
         )
@@ -126,30 +128,37 @@ if (WIN32)
 endif()
 
 # Includes shaders in build
-set(SHADERS_IN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/shaders")
-set(SHADERS_OUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/shaders")
+if(render_sys STREQUAL "Vulkan")
+        set(SHADERS_IN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/shaders")
+        set(SHADERS_OUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/shaders")
 
-file(GLOB_RECURSE SHADERS "${SHADERS_IN_DIR}/*.slang")
+        file(GLOB_RECURSE SHADERS "${SHADERS_IN_DIR}/*.slang")
 
-set(SLANGC "slangc")
+        set(SLANGC "slangc")
 
-file(MAKE_DIRECTORY ${SHADERS_OUT_DIR})
+        file(MAKE_DIRECTORY ${SHADERS_OUT_DIR})
 
-foreach(SHADER ${SHADERS})
-    get_filename_component(SHADER_NAME ${SHADER} NAME_WE)
-    set(SHADER_OUT_NAME "${SHADERS_OUT_DIR}/${SHADER_NAME}.spv")
-    list(APPEND SHADER_OUT_NAMES ${SHADER_OUT_NAME})
-    add_custom_command(
-            MAIN_DEPENDENCY ${SHADER}
-            OUTPUT ${SHADER_OUT_NAME}
-            COMMAND ${SLANGC} ${SHADER} -o ${SHADER_OUT_NAME} -target spirv -fvk-use-entrypoint-name -emit-spirv-directly -fvk-use-scalar-layout -matrix-layout-column-major
-            VERBATIM)
-endforeach()
+        foreach(SHADER ${SHADERS})
+        get_filename_component(SHADER_NAME ${SHADER} NAME_WE)
+        set(SHADER_OUT_NAME "${SHADERS_OUT_DIR}/${SHADER_NAME}.spv")
+        list(APPEND SHADER_OUT_NAMES ${SHADER_OUT_NAME})
+        add_custom_command(
+                MAIN_DEPENDENCY ${SHADER}
+                OUTPUT ${SHADER_OUT_NAME}
+                COMMAND ${SLANGC} ${SHADER} -o ${SHADER_OUT_NAME} -target spirv -fvk-use-entrypoint-name -emit-spirv-directly -fvk-use-scalar-layout -matrix-layout-column-major
+                VERBATIM)
+        endforeach()
 
+        add_custom_target(build_shaders DEPENDS ${SHADER_OUT_NAMES})
+
+        add_dependencies(${PROJECT_NAME} build_shaders)
+else(render_sys STREQUAL "WebGPU")
+        add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/shaders/webgpu" "${CMAKE_BINARY_DIR}/shaders"
+        )
+endif()
+
+# Imports other resources into build
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different "${CMAKE_CURRENT_SOURCE_DIR}/data" ${CMAKE_BINARY_DIR}
 )
-
-add_custom_target(build_shaders DEPENDS ${SHADER_OUT_NAMES})
-
-add_dependencies(${PROJECT_NAME} build_shaders)
